# text-icu-static-example

./: .gitignore  ChangeLog.md  Normalize.hs  README.md  default.nix  text-icu-static-example.cabal  text-icu-static.cabal
test/: CMakeLists.txt  test.c  test.nix
